# tbd_data_platform

./: .gitignore  dagster_cloud.yaml  pyproject.toml  setup.py
.github/workflows/: branch_deployments.yml  deploy.yml
tbd_dagster/: README.md  dagster_cloud.yaml  init.py  pyproject.toml  setup.cfg  setup.py
tbd_dagster/tbd_dagster/: __init__.py  assets.py  dbt.py  definitions.py  jobs.py  new_events.py  posthog_to_motherduck.py  requirements.txt  resources.py  schedule.py  upcoming_events.py
tbd_dagster/tmpmh9j6nrr/history/: runs.db
tbd_dagster/tmpmh9j6nrr/history/runs/: index.db
tbd_dagster/tmpmh9j6nrr/schedules/: schedules.db
tbd_dbt/: .user.yml  dbt_project.yml  profiles.yml
tbd_dbt/models/example/: schema.yml  source.yml  weekly_top_journals.sql
tmprylt4f1u/history/: runs.db
tmprylt4f1u/history/runs/: index.db
tmprylt4f1u/schedules/: schedules.db
