[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "tbd_dagster"
version = "0.1.0"
description = "TBD Dagster Project"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dagster = "^1.5.0"
dagster-cloud = "^1.5.0"
dagster-postgres = "^0.21.0"
pandas = "^2.0.0"
numpy = "^1.24.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[tool.dagster]
module_name = "tbd_dagster"